--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/001/c/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/001/c/index.xhtml
@@ -13,6 +13,7 @@
 				nts.uk.ctx.at.shared.dom.vacation.setting.annualpaidleave.MaxRemainingDay
 				nts.uk.ctx.at.shared.dom.vacation.setting.annualpaidleave.RetentionYear
 				nts.uk.ctx.at.shared.dom.vacation.setting.annualpaidleave.MaxTimeDay
+				nts.uk.ctx.at.shared.dom.vacation.setting.annualpaidleave.YearLyOfNumberDays
 			</com:ValidatorScript>
 
 			<com:scriptfile set="IGNITE" />
@@ -73,45 +74,6 @@
 							<td><div></div></td>
 						</tr>
 						<tr>
-							<td><label class="content-label">#{i18n.getText('KMF001_34')}</label></td>
-							<td><div tabindex="6"
-									data-bind="ntsSwitchButton: {
-										options: manageDistinctList,
-										optionsValue: 'value',
-										optionsText: 'localizedName',
-										value: selectedMaxManageSemiVacation,
-										enable: enableAnnualVacation }"></div></td>
-							<td><div></div></td>
-							<td><div></div></td>
-						</tr>
-						<tr>
-							<td style="min-width: 364px;"><label class="content-label">#{i18n.getText('KMF001_133')}</label></td>
-							<td><div tabindex="11" id="combo-box"
-									data-bind="ntsComboBox: {
-										options: maxDayReferenceList,
-										optionsValue: 'value',
-										value: selectedMaxNumberSemiVacation,
-										optionsText: 'localizedName',
-										editable: false,
-										enable: enableAnnualVacation,
-										columns: [
-											{prop: 'localizedName', length: 10 }
-										]}"></div></td>
-
-							<td style="min-width: 256px;"><label class="content-label">#{i18n.getText('KMF001_132')}</label></td>
-							<td><input tabindex="10" id="max-number-company"
-								class="nts-input" data-bind="ntsNumberEditor: {
-									value: maxNumberCompany,
-									constraint: 'AnnualNumberDay',
-									name: '#[KMF001_132]',
-									required: requiredMaxNumberCompany,
-									option: {
-										width: '70px',
-										unitID: 'TIMES'
-									},
-									enable: enableMaxNumberCompany}" /></td>
-						</tr>
-						<tr>
 							<td><label class="content-label">#{i18n.getText('KMF001_35')}</label></td>
 							<td style="padding-left: 4px;"><div
 									style="display: inline-block;">
@@ -164,6 +126,88 @@
 							<td><div></div></td>
 							<td><div></div></td>
 						</tr>
+						
+						
+						<tr>
+							<td><label class="content-label">#{i18n.getText('KMF001_151')}</label></td>
+							<td style="padding-left: 4px;"><div style="width: 82px;"><input tabindex="9"
+								id="number-year-retain" class="nts-input"
+								data-bind="ntsNumberEditor: {
+									value: yearlyOfNumberDays,
+									constraint: 'YearLyOfNumberDays',
+									name: '#[KMF001_151]',
+									required: enableAnnualVacation,
+									option: {
+										width: '80px',
+										decimallength: 1,
+										unitID: 'DAYS'
+									},
+									enable: enableAnnualVacation}" /></div></td>
+
+							<td><div></div></td>
+							<td><div></div></td>
+						</tr>
+						
+						
+						<tr>
+							<td><label class="content-label">#{i18n.getText('KMF001_34')}</label></td>
+							<td><div tabindex="6"
+									data-bind="ntsSwitchButton: {
+										options: manageDistinctList,
+										optionsValue: 'value',
+										optionsText: 'localizedName',
+										value: selectedMaxManageSemiVacation,
+										enable: enableAnnualVacation }"></div></td>
+							<td><div></div></td>
+							<td><div></div></td>
+						</tr>
+						<tr>
+							<td style="min-width: 364px;"><label class="content-label">#{i18n.getText('KMF001_133')}</label></td>
+							<td><div tabindex="11" id="combo-box"
+									data-bind="ntsComboBox: {
+										options: maxDayReferenceList,
+										optionsValue: 'value',
+										value: selectedMaxNumberSemiVacation,
+										optionsText: 'localizedName',
+										editable: false,
+										enable: enableAnnualVacation,
+										columns: [
+											{prop: 'localizedName', length: 10 }
+										]}"></div></td>
+
+							<td style="min-width: 256px;"><label class="content-label">#{i18n.getText('KMF001_132')}</label></td>
+							<td><input tabindex="10" id="max-number-company"
+								class="nts-input" data-bind="ntsNumberEditor: {
+									value: maxNumberCompany,
+									constraint: 'AnnualNumberDay',
+									name: '#[KMF001_132]',
+									required: requiredMaxNumberCompany,
+									option: {
+										width: '70px',
+										unitID: 'TIMES'
+									},
+									enable: enableMaxNumberCompany}" /></td>
+						</tr>
+						
+						
+						
+						<tr>
+							<td style="min-width: 364px;"><label class="content-label">#{i18n.getText('KMF001_139')}</label></td>
+							<td><div tabindex="11" id="combo-box"
+									data-bind="ntsComboBox: {
+										options: maxDayReferenceList,
+										optionsValue: 'value',
+										value: selectedMaxNumberSemiVacation,
+										optionsText: 'localizedName',
+										editable: false,
+										enable: enableAnnualVacation,
+										columns: [
+											{prop: 'localizedName', length: 10 }
+										]}"></div></td>
+
+							<td><div></div></td>
+							<td><div></div></td>
+						</tr>
 						<!-- END 年次有給休暇の扱い -->
 
 						<!-- BEGIN 年休取得の設定 -->
@@ -173,19 +217,19 @@
 									<hr />
 								</div></td>
 						</tr>
-						<tr>
-							<td><label class="content-label">#{i18n.getText('KMF001_40')}</label></td>
-							<td><div tabindex="12"
-									data-bind="ntsSwitchButton: {
-										options: applyPermissionList,
-										optionsValue: 'value',
-										optionsText: 'localizedName',
-										value: selectedApplyPermission,
-										enable: enableAnnualVacation }"></div></td>
+<!-- 						<tr> -->
+<!-- 							<td><label class="content-label">#{i18n.getText('KMF001_40')}</label></td> -->
+<!-- 							<td><div tabindex="12" -->
+<!-- 									data-bind="ntsSwitchButton: { -->
+<!-- 										options: applyPermissionList, -->
+<!-- 										optionsValue: 'value', -->
+<!-- 										optionsText: 'localizedName', -->
+<!-- 										value: selectedApplyPermission, -->
+<!-- 										enable: enableAnnualVacation }"></div></td> -->
 
-							<td><div></div></td>
-							<td><div></div></td>
-						</tr>
+<!-- 							<td><div></div></td> -->
+<!-- 							<td><div></div></td> -->
+<!-- 						</tr> -->
 						<tr>
 							<td><label class="content-label">#{i18n.getText('KMF001_41')}</label></td>
 							<td><div tabindex="13"
@@ -321,11 +365,28 @@
 									enable: enableTimeMaxNumberCompany}" /></td>
 						</tr>
 						<tr>
-							<td colspan="4" style="padding-left: 50px;"><div tabindex="27"
-									data-bind="ntsCheckBox: { checked: isEnoughTimeOneDay,
-									enable: enableTimeMaxNumberCompany,
-									text: '#{i18n.getText('KMF001_55')}' }"></div></td>
+							<td><label class="content-label">#{i18n.getText('KMF001_140')}</label></td>
+							<td><div tabindex="25" id="combo-box"
+									data-bind="ntsComboBox: {
+										options: maxDayReferenceList,
+										optionsValue: 'value',
+										value: selectedMaxDayVacation,
+										optionsText: 'localizedName',
+										editable: false,
+										enable: enableTimeSetting,
+										columns: [
+											{prop: 'localizedName', length: 10 }
+										]}"></div></td>
+
+							<td><div></div></td>
+							<td><div></div></td>
 						</tr>
+<!-- 						<tr> -->
+<!-- 							<td colspan="4" style="padding-left: 50px;"><div tabindex="27" -->
+<!-- 									data-bind="ntsCheckBox: { checked: isEnoughTimeOneDay, -->
+<!-- 									enable: enableTimeMaxNumberCompany, -->
+<!-- 									text: '#{i18n.getText('KMF001_55')}' }"></div></td> -->
+<!-- 						</tr> -->
 						<!-- END時間年休 -->
 					</table>
 				</div>
