--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/m/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/m/index.xhtml
@@ -18,7 +18,7 @@
 			<com:stylefile path="cmf001.m.style.css" />
 			<com:scriptfile path="cmf001.m.vm.js" />
 			<com:scriptfile path="cmf001.m.start.js" />
-			
+			<com:scriptfile path="cmf001.m.service.js" />
 		</ui:define>
 
 		<ui:define name="content">
@@ -59,8 +59,12 @@
 										<label>#{i18n.getText('CMF001_407')}</label>
 									</div>
 								</td>
-								<td><input  tabindex="1" data-bind="ntsTextEditor: {value: newCondCode}" class="td_center_sp" /></td>
-								<td class="td_right"><input tabindex="2" data-bind="ntsTextEditor: {value: newCondName}" /></td>
+								<td><input class="td_center_sp" id="M4" tabindex="1" data-bind="ntsTextEditor: {value: newCondCode, 
+																					name: '#[CMF001_408]',
+																					required: true}" /></td>
+								<td class="td_right"><input tabindex="2" data-bind="ntsTextEditor: {value: newCondName, 
+																					name: '#[CMF001_409]',
+																					required: true}" /></td>
 							</tr>
 						</table>
 						<div class="checkbox_bottom" tabindex="3" data-bind="ntsCheckBox: { checked: checked, enable: enable, text: '#{i18n.getText('CMF001_410')}',  style: 'warnpanel'}"></div>
@@ -68,7 +72,7 @@
 				</div>
 			</div>
  			<div id="functions-area-bottom">
-				<button class="x-large" tabindex="4" data-bind="click: saveData">#{i18n.getText('CMF001_393')}</button>
+				<button class="x-large" tabindex="4" data-bind="click: saveData, enable: $root.errors.isEmpty">#{i18n.getText('CMF001_393')}</button>
 				<button class="large" tabindex="5" data-bind="click: cancelSetting">#{i18n.getText('CMF001_394')}</button>
 			</div> 
 		</ui:define>
