--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/001/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/001/index.xhtml
@@ -190,6 +190,7 @@ export interface GroupOption {
     showAllClosure: boolean; // 全締め表示
     showPeriod: boolean; // 対象期間利用
     periodFormatYM: boolean; // 対象期間精度
+    isInDialog?: boolean;
 
     /** Required parameter */
     baseDate?: string; // 基準日
@@ -213,11 +214,16 @@ export interface GroupOption {
     showJobTitle: boolean; // 職位条件
     showWorktype: boolean; // 勤種条件
     isMutipleCheck: boolean; // 選択モード
-    // showDepartment: boolean; // 部門条件 not covered
-    // showDelivery: boolean; not covered
 
     /** Data returned */
     returnDataFromCcg001: (data: Ccg001ReturnedData) => void;
+}
+export interface EmployeeSearchDto {
+    employeeId: string;
+    employeeCode: string;
+    employeeName: string;
+    workplaceId: string;
+    workplaceName: string;
 }
 export interface Ccg001ReturnedData {
     baseDate: string; // 基準日
@@ -398,6 +404,10 @@ $('#com-ccg001').ntsGroupComponent(self.ccg001ComponentOption);]]>
 												selection in KCP005</td>
 										</tr>
 										<tr>
+											<td>isInDialog<br/><i>(optional)</i></td>
+											<td><b>Type:</b> boolean<br /> Set true if use component in a dialog</td>
+										</tr>
+										<tr>
 											<td>returnDataFromCcg001</td>
 											<td><b>Type:</b> function<br />
 											<b>Param:</b> output data<br/>Output data function</td>
@@ -427,6 +437,10 @@ $('#com-ccg001').ntsGroupComponent(self.ccg001ComponentOption);]]>
 										<tr>
 											<td>periodStart</td>
 											<td><b>Type:</b> string(ISO 8601 Formats)<br /> Period start date</td>
+										</tr>
+										<tr>
+											<td>workplaceId</td>
+											<td><b>Type:</b> string<br /> Workplace Id</td>
 										</tr>
 										<tr>
 											<td>periodEnd</td>
