--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/001/a/ksu001.a.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/001/a/ksu001.a.main.css
@@ -286,6 +286,12 @@ table th, table td {
 	margin-top: 2px
 }
 
+.ex-editor {
+	width: 100%;
+	height: 100%;
+	box-sizing: border-box;
+}
+
 .ex-editor input {
 	width: 100% !important;
 	height: 100% !important;
