kaf022 fix ie scroll

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/kaf022.a.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/kaf022.a.main.css
@@ -1,3 +1,7 @@
+/ Override Base /
+.ui-widget.ui-tabs.vertical > .ui-tabs-panel {
+    overflow: visible;
+}
 td div {
 	position: relative;
 	vertical-align: middle;
