--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/003/a/index.xhtml
@@ -141,7 +141,7 @@
 							<button id="btn-saveColumnWidth"
 								data-bind="click: btnSaveColumnWidth_Click, visible : showButton().available8">#{i18n.getText('KDW003_24')}</button>
 							<div class="setting-container">
-								<button id="btn-setting" data-bind="click: btnSetting_Click , visible:false">&#9881;</button>
+								<button id="btn-setting" data-bind="click: btnSetting_Click , visible:true">&#9881;</button>
 								<div id="setting-content">
 									<div data-bind="ntsFormLabel: {}">#{i18n.getText('KDW003_28')}</div>
 									<div id="cbCursorMoveDirection"
