CMM045: fix bug ui

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/cmm/045/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/cmm/045/a/index.xhtml
@@ -86,7 +86,7 @@
 						
 					</div>
 					
-					<div class = "cell" style ="padding-left: 20px, border: 1px, border-color: #AAAAAA;">
+					<div class = "cell" style ="padding: 20px; border:1px solid #AAAAAA;">
 						<!-- A2: Switch button -->
 						<div data-bind = "visible: mode()==1">
 							<div data-bind="ntsSwitchButton: {
